[package]
name = "pyo3-asyncio"
version = "0.1.0"
authors = ["Andrew J Westlake <awestlake87@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
testing = ["clap"]
default = []

[[test]]
name = "test_asyncio"
path = "pytests/test_asyncio.rs"
harness = false
required-features = ["testing"]

[[test]]
name = "test_run_forever"
path = "pytests/test_run_forever.rs"
harness = false
required-features = ["testing"]

[dependencies]
clap = { version = "2.33", optional = true }
futures = "0.3"
lazy_static = "1.4"
once_cell = "1.5"
pyo3 = "0.13"
tokio = { version = "1.0", features = ["full"] }