[package]
name = "pyo3-asyncio"
description = "PyO3 utilities for Python's Asyncio library"
version = "0.13.4"
authors = ["Andrew J Westlake <awestlake87@yahoo.com>"]
readme = "README.md"
keywords = ["pyo3", "python", "ffi", "async", "asyncio"]
homepage = "https://github.com/awestlake87/pyo3-asyncio"
repository = "https://github.com/awestlake87/pyo3-asyncio"
documentation = "https://docs.rs/crate/pyo3-asyncio/"
categories = ["api-bindings", "development-tools::ffi"]
license = "Apache-2.0"
exclude = ["/.gitignore", "/codecov.yml", "/Makefile"]
edition = "2018"

[workspace]
members = ["pyo3-asyncio-macros"]

[features]
async-std-runtime = ["async-std"]
attributes = ["pyo3-asyncio-macros"]
testing = ["clap"]
tokio-runtime = ["tokio"]
default = []

[package.metadata.docs.rs]
features = ["attributes", "testing", "async-std-runtime", "tokio-runtime"]

[[example]]
name = "async_std"
path = "examples/async_std.rs"
required-features = ["attributes", "async-std-runtime"]

[[example]]
name = "tokio"
path = "examples/tokio.rs"
required-features = ["attributes", "tokio-runtime"]

[[example]]
name = "tokio_current_thread"
path = "examples/tokio_current_thread.rs"
required-features = ["attributes", "tokio-runtime"]

[[example]]
name = "tokio_multi_thread"
path = "examples/tokio_multi_thread.rs"
required-features = ["attributes", "tokio-runtime"]


[[test]]
name = "test_async_std_asyncio"
path = "pytests/test_async_std_asyncio.rs"
harness = false
required-features = ["async-std-runtime", "testing", "attributes"]

[[test]]
name = "test_async_std_run_forever"
path = "pytests/test_async_std_run_forever.rs"
harness = false
required-features = ["async-std-runtime", "testing"]

[[test]]
name = "test_tokio_current_thread_asyncio"
path = "pytests/test_tokio_current_thread_asyncio.rs"
harness = false
required-features = ["tokio-runtime", "testing", "attributes"]

[[test]]
name = "test_tokio_current_thread_run_forever"
path = "pytests/test_tokio_current_thread_run_forever.rs"
harness = false
required-features = ["tokio-runtime", "testing"]

[[test]]
name = "test_tokio_multi_thread_asyncio"
path = "pytests/test_tokio_multi_thread_asyncio.rs"
harness = false
required-features = ["tokio-runtime", "testing", "attributes"]

[[test]]
name = "test_tokio_multi_thread_run_forever"
path = "pytests/test_tokio_multi_thread_run_forever.rs"
harness = false
required-features = ["tokio-runtime", "testing"]

[dependencies]
clap = { version = "2.33", optional = true }
futures = "0.3"
inventory = "0.1"
lazy_static = "1.4"
once_cell = "1.5"
pyo3 = "0.14"
pyo3-asyncio-macros = { path = "pyo3-asyncio-macros", version = "=0.13.4", optional = true }

[dependencies.async-std]
version = "1.9"
features = ["unstable"]
optional = true

[dependencies.tokio]
version = "1.4" 
features = ["full"]
optional = true
